apps/jenkins/jenkins-ingress.yml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
labels:
app: "jenkins"
version: "latest"
group: "jenkins"
namespace: "jenkins"
name: "jenkins"
spec:
rules:
  - host: "jenkins"
http:
paths:
  - backend:
serviceName: "jenkins"
servicePort: 80
path: "/"
